<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_gray"
    android:orientation="vertical"
    tools:context=".SessionWritingFragment">

    <com.capstone.surfingthegangwon.core.ui.TopAppBar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <!-- 위 윈도우 -->
            <LinearLayout
                android:id="@+id/topWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shadow_rounded_background"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="15dp"
                android:paddingEnd="30dp"
                app:layout_constraintTop_toTopOf="parent">

                <!-- 모임 일시 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateAndTime"
                        style="@style/sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/dater_and_time_of_session" />

                    <TextView
                        android:id="@+id/dateAndTimeDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_based_on_the_session_time" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/calanderTv"
                        style="@style/drawable_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/calander_icon"
                        android:text="@string/date_hint"
                        android:textColor="@drawable/black_to_blue_text_selector" />

                    <TextView
                        android:id="@+id/timeTv"
                        style="@style/drawable_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/clock_icon"
                        android:text="@string/time_hint"
                        android:textColor="@drawable/black_to_blue_text_selector" />

                </LinearLayout>

                <!--지역 및 해변-->
                <TextView
                    android:id="@+id/regionsAndBeaches"
                    style="@style/sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regions_and_beaches" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/regionsRcv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/beachesRcv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />


                <!-- 그룹 난이도 -->
                <TextView
                    android:id="@+id/groupDifficulty"
                    style="@style/sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_difficulty" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbBeginner"
                        style="@style/grade_radio_button"
                        android:background="@drawable/bg_beginner_selector"
                        android:checked="true"
                        android:drawableTint="@color/grade_beginner"
                        android:text="@string/grade_beginner" />

                    <RadioButton
                        android:id="@+id/rbIntermediate"
                        style="@style/grade_radio_button"
                        android:background="@drawable/bg_intermediate_selector"
                        android:drawableTint="@color/grade_intermediate"
                        android:text="@string/grade_intermediate" />

                    <RadioButton
                        android:id="@+id/rbAdvanced"
                        style="@style/grade_radio_button"
                        android:background="@drawable/bg_advanced_selector"
                        android:drawableTint="@color/grade_advanced"
                        android:text="@string/grade_advanced" />

                </RadioGroup>

                <!-- 그룹 최대 인원수 -->
                <TextView
                    android:id="@+id/maximumNumberOfGroups"
                    style="@style/sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maximum_number_of_groups" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:paddingBottom="15dp"
                    android:scrollbars="none">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio1"
                            style="@style/radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="1" />

                        <RadioButton
                            android:id="@+id/radio2"
                            style="@style/radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2" />

                        <RadioButton
                            android:id="@+id/radio3"
                            style="@style/radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3" />

                        <RadioButton
                            android:id="@+id/radio4"
                            style="@style/radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4" />

                        <RadioButton
                            android:id="@+id/radio5"
                            style="@style/radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5" />

                        <RadioButton
                            android:id="@+id/radio6"
                            style="@style/radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="6" />
                    </RadioGroup>
                </HorizontalScrollView>
            </LinearLayout>

            <View
                android:id="@+id/shadow1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/bottom_shadow"
                app:layout_constraintTop_toBottomOf="@id/topWindow" />

            <!-- 모집 상세 내용 작성 -->
            <TextView
                android:id="@+id/createDetailsOfSessionDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="center"
                android:text="@string/create_details_of_session_details"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/bottomWindow"
                app:layout_constraintTop_toBottomOf="@id/topWindow" />

            <View
                android:id="@+id/shadow2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/top_shadow"
                app:layout_constraintBottom_toTopOf="@id/bottomWindow" />

            <!-- 아래 윈도우 -->
            <LinearLayout
                android:id="@+id/bottomWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_top_rounded_background"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createDetailsOfSessionDetails">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/sessionTitle"
                    style="@style/edit_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/please_fill_out_the_title_within_15_characters"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/sessionContent"
                    style="@style/edit_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/session_background"
                    android:hint="@string/please_write_an_additional_description"
                    android:inputType="textMultiLine"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/phoneTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/pretendard_medium"
                    android:text="@string/enter_phone_number"
                    android:textColor="@color/zinc_500"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/phoneIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        app:srcCompat="@drawable/phone_icon" />

                    <EditText
                        android:id="@+id/prefixNumber"
                        style="@style/phone_editTv"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/session_background"
                        android:inputType="phone"
                        android:maxLength="3"
                        android:text="010" />

                    <EditText
                        android:id="@+id/exchangeNumber"
                        style="@style/phone_editTv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/session_background"
                        android:inputType="phone"
                        android:maxLength="4"
                        android:text="0000" />

                    <EditText
                        android:id="@+id/subscriberNumber"
                        style="@style/phone_editTv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/session_background"
                        android:inputType="phone"
                        android:maxLength="4"
                        android:text="0000" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registrationBtn"
                    style="@style/Widget.Blue.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/registration" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>